--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
+    "dotenv": "^16.0.1",
     "eleventy": "^1.0.6"
   }
 }
