--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "devDependencies": {
     "@11ty/eleventy": "^1.0.1",
     "dotenv": "^16.0.1",
-    "eleventy": "^1.0.6"
+    "eleventy": "^1.0.6",
+    "eleventy-sass": "^1.3.1"
+  },
+  "dependencies": {
+    "govuk-frontend": "^4.1.0"
   }
 }
