--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx @11ty/eleventy",
-    "start": "npx @11ty/eleventy --serve"
+    "start": "npx @11ty/eleventy --serve",
+    "deploy": "API_KEY_AUTOFORM=x API_KEY_DATAHUB=x npm run build && npm run surge",
+    "surge": "cd _site && surge"
   },
   "author": "pom",
   "license": "ISC",
